--- a/ecommerce/shop/templates/nav.html
+++ b/ecommerce/shop/templates/nav.html
@@ -19,7 +19,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item {% if request.path == '/' %} active {% endif %}">
-        <a class="nav-link" href="">Home</a>
+        <a class="nav-link" href="{% url 'shop:allProdCat' %}">Home</a>
       </li>
       <li class="nav-item dropdown {% if 'shop' in request.path %} active {% endif %}">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
